src/test/ui/regions/regions-proc-bound-capture.stderr
error[E0758]: cannot infer an appropriate lifetime
  --> $DIR/regions-proc-bound-capture.rs:9:14
   |
LL | fn static_proc(x: &isize) -> Box<dyn FnMut() -> (isize) + 'static> {
   |                   ------ this data with an anonymous lifetime `'_`...
LL |     // This is illegal, because the region bound on `proc` is 'static.
LL |     Box::new(move || { *x })
   |              ^^^^^^^^^^^^^^ ...is captured here requiring it to live as long as `'static`
   |
help: consider changing the trait object's explicit `'static` bound to an anonymous lifetime `'_`
   |
LL | fn static_proc(x: &isize) -> Box<dyn FnMut() -> (isize) + '_> {
   |                                                           ^^
help: alternatively, set an explicit `'static` lifetime in this parameter
   |
LL | fn static_proc(x: &'static isize) -> Box<dyn FnMut() -> (isize) + 'static> {
   |                   ^^^^^^^^^^^^^^

error: aborting due to previous error

